--- a/pages/calculadora-imc.html
+++ b/pages/calculadora-imc.html
@@ -18,7 +18,7 @@
                 <a href=""><img src="../images/logo.svg" alt=""></a>
             </div>
             <div class="person">
-                <a href="./pages/login.html"><img src="../images/icone-perfil.svg" alt=""></a>
+                <a href="../pages/tela-membros.html"><img src="../images/icone-perfil.svg" alt=""></a>
             </div>
         </div>
     </header>
