--- a/pages/tela-membros.html
+++ b/pages/tela-membros.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="">Plano de Alimentação</a></li>
+                    <li><a href="../pages/plano-alimentacao.html">Plano de Alimentação</a></li>
                     <li><a href="">Lista de Compras</a></li>
                     <li><a href="">Suplementos</a></li>
                     <li><a href="../pages/calculadora-imc.html">Calculadora IMC</a></li>
