--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </tr>
                 </table>
                 <div class="botoes">
-                    <a href="">Seja Membro</a>
+                    <a href="./pages/pagamento.html">Seja Membro</a>
                     <div class="price">R$49,99</div>
                 </div>
             </div>
