--- a/pages/tela-membros.html
+++ b/pages/tela-membros.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/logo-2.svg" type="image/x-icon">
     <title>NutriPlus</title>
 </head>
 
@@ -20,9 +21,10 @@
             <nav>
                 <ul>
                     <li><a href="../pages/plano-alimentacao.html">Plano de Alimentação</a></li>
-                    <li><a href="">Lista de Compras</a></li>
-                    <li><a href="">Suplementos</a></li>
+                    <li><a href="../pages/lista-de-compras.html">Lista de Compras</a></li>
+                    <li><a href="../pages/suplementos.html">Suplementos</a></li>
                     <li><a href="../pages/calculadora-imc.html">Calculadora IMC</a></li>
+                    <li><a href="../index.html"><img src="../images/log-out.svg" alt=""></a></li>
                 </ul>
             </nav>
         </div>
@@ -33,8 +35,8 @@
             <div class="noticias">
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque deleniti quam doloremque
-                            reiciendis porro aut enim</h2>
+                        <h2>Cortar completamente carne e laticínios faz bem à saúde? O que diz a ciência
+                        </h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-1.jpg" alt="">
@@ -47,9 +49,7 @@
 
                 <div class="card">
                     <div class="headline" id="d">
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quia atque harum similique
-                            libero molestias.
-                        </h2>
+                        <h2>USP vai analisar, ao longo de 10 anos, o que os brasileiros põem no prato todos os dias.</h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-2.jpg" alt="">
@@ -62,8 +62,8 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde alias corrupti corporis
-                            ducimus? Nostrum, possimus.</h2>
+                        <h2>O que é melhor para a saúde, leite de vaca ou 'alternativos'?
+                        </h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-3.jpg" alt="">
@@ -76,8 +76,7 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab nesciunt fugit autem nihil
-                            temporibus libero.</h2>
+                        <h2>Provou, já era: como identificar os alimentos hiperpalatáveis, dos quais é (quase) impossível fugir?</h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-4.jpg" alt="">
@@ -90,8 +89,8 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, perspiciatis in!
-                            Doloribus sunt quas optio.</h2>
+                        <h2>Novas regras para rótulos de alimentos começam a valer
+                        </h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-5.jpg" alt="">
@@ -104,8 +103,8 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti culpa tempore sapiente
-                            voluptas, iure rem?</h2>
+                        <h2>‘Óleo de coco é veneno puro’, diz pesquisadora de Harvard
+                        </h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-6.jpg" alt="">
@@ -118,8 +117,8 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti culpa tempore sapiente
-                            voluptas, iure rem?</h2>
+                        <h2>Médico explica o que muda com nova recomendação da OMS para consumo de gordura, açúcar e carboidratos
+                        </h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-7.jpg" alt="">
@@ -132,11 +131,11 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti culpa tempore sapiente
-                            voluptas, iure rem?</h2>
+                        <h2>Restrição alimentar não funciona com adolescentes, avalia nutricionista
+                        </h2>
                     </div>
                     <div class="box-image">
-                        <img src="../images/img-8.jpeg" alt="">
+                        <img src="../images/img-8.jpg" alt="">
                     </div>
                     <div class="box-data">
                         <div class="data">16-04-2023</div>
@@ -146,8 +145,8 @@
 
                 <div class="card">
                     <div class="headline">
-                        <h2>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti culpa tempore sapiente
-                            voluptas, iure rem?</h2>
+                        <h2>Soja pode ser alternativa para dietas restritivas em proteínas de origem animal
+                        </h2>
                     </div>
                     <div class="box-image">
                         <img src="../images/img-9.jpg" alt="">
@@ -160,6 +159,7 @@
             </div>
         </div>
     </section>
+
 
     <div class="mais-post">
         <a href="">ver mais postagens</a>
