--- a/pages/calculadora-imc.html
+++ b/pages/calculadora-imc.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/logo-2.svg" type="image/x-icon">
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <a href=""><img src="../images/logo.svg" alt=""></a>
             </div>
             <div class="person">
-                <a href="../pages/tela-membros.html"><img src="../images/icone-perfil.svg" alt=""></a>
+                <a href="../pages/tela-membros.html"><img src="../images/log-out.svg" alt=""></a>
             </div>
         </div>
     </header>
@@ -29,13 +30,15 @@
             <div class="card-calculadora">
                 <div class="calculadora">
                     <div class="title-cacluladora">INSIRA SEUS DADOS</div>
-                    <form action="">
-                        <label for="">Peso(KG)</label>
-                        <input type="number">
-                        <label for="">Altura(CM)</label>
-                        <input type="text" name="" id="">
-                        <label for="">Seu IMC:</label>
-                        <input type="text">
+                    <form onsubmit="calcularIMC(event)">
+                        <label for="peso">Peso(KG)</label>
+                        <input type="number" id="peso" required>
+                        <label for="altura">Altura(CM)</label>
+                        <input type="number" id="altura" required>
+                        <label for="resultado">Seu IMC:</label>
+                        <input type="text" id="resultado" readonly>
+                        <label for="classificacao">Classificação:</label>
+                        <input type="text" id="classificacao" readonly>
 
                         <div class="buttons-calculadora">
                             <button type="submit">CALCULAR</button>
@@ -44,11 +47,38 @@
                     </form>
                 </div>
             </div>
-
-
-
         </div>
     </section>
+
+    <script>
+        function calcularIMC(event) {
+            event.preventDefault();
+
+            const peso = parseFloat(document.getElementById("peso").value);
+            const altura = parseFloat(document.getElementById("altura").value) / 100; // converter para metros
+            const imc = peso / (altura * altura);
+            const classificacao = getClassificacaoIMC(imc);
+
+            document.getElementById("resultado").value = imc.toFixed(2);
+            document.getElementById("classificacao").value = classificacao;
+        }
+
+        function getClassificacaoIMC(imc) {
+            if (imc < 18.5) {
+                return "Abaixo do peso";
+            } else if (imc >= 18.5 && imc < 24.9) {
+                return "Peso normal";
+            } else if (imc >= 25 && imc < 29.9) {
+                return "Sobrepeso";
+            } else if (imc >= 30 && imc < 34.9) {
+                return "Obesidade grau 1";
+            } else if (imc >= 35 && imc < 39.9) {
+                return "Obesidade grau 2";
+            } else {
+                return "Obesidade grau 3";
+            }
+        }
+    </script>
 </body>
 
 </html>
