--- a/pages/plano-alimentacao.html
+++ b/pages/plano-alimentacao.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="../images/logo-2.svg" type="image/x-icon">
     <title>Plano de Alientação</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
                 <a href=""><img src="../images/logo.svg" alt=""></a>
             </div>
             <div class="person">
-                <a href="../pages/tela-membros.html"><img src="../images/icone-perfil.svg" alt=""></a>
+                <a href="../pages/tela-membros.html"><img src="../images/log-out.svg" alt=""></a>
             </div>
         </div>
     </header>
@@ -25,6 +26,7 @@
     <section>
         <div class="container-plano-alimentacao">
             <div class="plano-alimentacao">
+                <h1 class="text-plano-alimentacao">Essa é a sua dieta personalizada!</h1>
                 <table>
                     <tr>
                         <td>Alimentação</td>
@@ -39,75 +41,75 @@
                 <div class="card-plano-alimentacao">
                     <table>
                         <tr>
-                            <td >Água com Limão</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td >Arroz Branco</td>
+                            <td>250g</td>
+                            <td>5.95g</td>
+                            <td>0.52g</td>
+                            <td>71.3g</td>
+                            <td>325kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Cacau em pó</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>Patinho moído</td>
+                            <td>100g</td>
+                            <td>26g</td>
+                            <td>2.5g</td>
+                            <td>1.3g</td>
+                            <td>186kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Café</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>Abacaxi</td>
+                            <td>380g</td>
+                            <td>0.6g</td>
+                            <td>0.08g</td>
+                            <td>9.3g</td>
+                            <td>102kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Chá de Erva Doce</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>Alface Americana</td>
+                            <td>70g</td>
+                            <td>2.8g</td>
+                            <td>0.0g</td>
+                            <td>4.8g</td>
+                            <td>34kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Chá Mate</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
+                            <td>Filé de Frango</td>
+                            <td>180g</td>
+                            <td>36g</td>
+                            <td>13.5g</td>
                             <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>350kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Chá Preto</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>Macarrão</td>
+                            <td>240g</td>
+                            <td>12.8g</td>
+                            <td>1.5g</td>
+                            <td>63.3g</td>
+                            <td>302kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Gengibre</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>Tilápia</td>
+                            <td>100g</td>
+                            <td>25.8g</td>
+                            <td>1.5g</td>
+                            <td>7.3g</td>
+                            <td>102kcal</td>
                         </tr>
 
                         <tr>
-                            <td>Chocolate</td>
-                            <td>240ml</td>
-                            <td>0.8g</td>
-                            <td>0.5g</td>
-                            <td>0.3g</td>
-                            <td>150kcal</td>
+                            <td>Doce de leite</td>
+                            <td>30g</td>
+                            <td>2.8g</td>
+                            <td>5.5g</td>
+                            <td>14.5g</td>
+                            <td>78kcal</td>
                         </tr>
                     </table>
                 </div>
